style.css
/* ... */
figure.amazon.instant {background-color:#48a6de;background-image:radial-gradient(ellipse,#48a6de 50%,#347aad);}
/* BLUETOOTH */
figure.bluetooth {background:url(images/bluetooth/chevrons-blue-transp.png) repeat center;background-color:#40a0fc;background-size:100px 100px;color:white;}
figure.bluetooth:hover {background-size:92px 92px;}
/* BOB */
figure.bob {background:url(images/bob-books/bob-bg.jpg) no-repeat center;background-size:108% 108%;color:#4f5354;}
figure.bob:hover {background-size:100% 100%;}
figure.bob h4 {margin-top:-10px;}
/* DICTIONARY */
figure.dictionary {background:#ffdc68;color:black;}
figure.dictionary h4 {margin-top:-30px;}
figure.dictionary img {max-width:88%;}
figure.dictionary:hover img {max-width:93%;}
/* TMO */
figure.tmo {background:url(images/tmo/topography.png) repeat center;background-size:400px 400px;}
figure.tmo:hover {background-size:370px 370px;}
figure.tmo h4 {margin-top:0;color:#2a2a2a;}
/* EARWAX */
figure.loveEarwax {background-color:#1b1b1b;color:white;}
figure.loveEarwax div {position:relative;}
figure.loveEarwax img:last-child {opacity:0;transition:opacity 240ms;position:absolute;top:0;right:0;left:0;z-index:1;}
figure.loveEarwax:hover img:last-child {opacity:1;}
/* LENDINGHOME */
figure.lending {background-color:#f7CC45;color:black;}
/* WEB FOUNDATIONS */
figure.mentoring {background-color:var(--bg);}
/* SUX */
figure.sux {background-color:#e0f2f1;color:#375068;}
figure.sux h4 {margin-top:-12px;}

.caseStudyLink img[src=""] {display:none;}
@media screen and (min-width:670px) {
  .work {padding-bottom:0;}
  .work .title {float:left;vertical-align:middle;}
  .work .flex-grid {display:flex;flex-wrap:wrap;justify-content:space-between;margin-top:10px;}
  .flex-grid.date .headings {display:none;}
  .flex-grid a {width:fit-content;}
  .flex-grid.date a {margin:2% 0;width:calc(48%);}
  .flex-grid.other a {margin:2% 0;width:calc(48%);margin-bottom:60px;}
  /*.work img {}*/

  /* ALERT */
  .alert {background-color:var(--text-faint-alpha);border-radius:8px;margin:15px 0 10px auto;padding:8px 12px;text-align:center;width:fit-content;}
  .alert :only-child {margin:0;}
  /* PHASE HEADINGS */
  .flex-grid .headings {font-size:0;list-style:none;padding:10px 0 0;width:max-content;}
  .flex-grid .headings li {display:inline-block;border-bottom:2px solid var(--text-med);font-size:1.3rem;margin-right:40px;padding-bottom:10px;position:relative;text-align:center;width:400px;}
  .flex-grid .headings li::after {border-right:2px dashed var(--text-ultra-faint);content:'';display:block;position:absolute;top:0;right:-20px;height:calc(100% + 15px + 210px * 7);}
  .flex-grid .headings li:last-child {padding-left:200px;text-align:left;width:calc(100vw - 710px);min-width:270px;}
  .flex-grid .headings li:last-child::after {content:unset;}

  /* PHASE */
  .flex-grid.phase {display:block;overflow-x:auto;margin:10px calc(-5vw - 15px);overflow:auto;padding:0 calc(5vw + 15px) 60px;}
  .flex-grid.phase a:hover {box-shadow:unset;}
  .flex-grid.phase a::after {background-color:var(--text-faint-alpha);border-radius:10px;content:'';display:block;position:absolute;top:7px;bottom:7px;left:0;right:0;z-index:0;}
  .flex-grid.phase a.col-2 {width:calc(2 * 400px + 1 * 40px);} /* 40px = gutter width */
  .flex-grid.phase a.col-3 {width:calc(3 * 400px + 2 * 40px);}
  .flex-grid.phase a.col-4 {width:calc(4 * 400px + 3 * 40px);}
  .flex-grid.phase a.col-5 {width:calc(5 * 400px + 4 * 40px);}
  .flex-grid.phase a.col-6 {width:calc(6 * 400px + 5 * 40px);}
  .flex-grid.phase a.offset-1 {margin-left:calc(1 * 400px + 1 * 40px);}
  .flex-grid.phase a.offset-2 {margin-left:calc(2 * 400px + 2 * 40px);}
  .flex-grid.phase a.offset-3 {margin-left:calc(3 * 400px + 3 * 40px);}
  .flex-grid.phase a.offset-4 {margin-left:calc(4 * 400px + 4 * 40px);}
  .flex-grid.phase figure {width:370px;margin-top:20px;position:-webkit-sticky;position:sticky;left:0;top:0;z-index:1;}
}
@media screen and (min-width:970px) {
  .flex-grid.date a {width:calc(31%);}
  .flex-grid .headings {padding-right:5vw;}
  .flex-grid .headings li:last-child {width:calc(95vw - 710px);}
}
@media screen and (min-width:1200px) {
  .flex-grid.phase {margin-left:calc(-50vw + 520px);width:88vw;}
  .flex-grid .headings {padding-right:10vw;}
  .flex-grid .headings li:last-child {width:calc(90vw - 710px);}
}

/* FOOTER */
#footer {background-color:var(--bg-faint);}
#footer h5 {font-size:1.6em;}
#footer a {margin-right:20px;}
#footer a:hover {text-decoration:underline;}

/* dynamicLoad */
@media screen and (max-width:859px) {#dynamicLoad ~ * {display:none;}}
@media screen and (min-width:860px) {
  body.dynamicLoad {
    overflow:hidden;
    position:fixed;
    top:0;
    right:0;
    bottom:0;
    left:0;
    z-index:10;
  }
  #dynamicLoad ~ section, #dynamicLoad ~ footer {
    transition:filter 300ms;
    filter:blur(7px);
  }
  #dynamicLoad {
    background-color:rgba(255,255,255,0.3);
    box-shadow:0 0 140px -25px rgba(0,0,0,.6);
    max-height:calc(100vh - 100px);
    overflow-y:auto;
    padding:50px 0;
    position:fixed;
    top:0;
    right:0;
    bottom:0;
    left:0;
    z-index:10;
  }
}
@media screen and (min-width:1200px) {
  body.dynamicLoad {overflow:unset;}
}

@media (prefers-color-scheme:dark) {
:root {
  --text:#fff;
  --text-med:#bbb;
  --text-faint:#8f8e83;
  --text-faint-alpha:#8f8e838f;
  --text-ultra-faint:#444;
  --highlight:#5e5a00;
  --header-bg:#1d1d1d;
  --bg:#000;
  --bg-faint:#181818;
  --selection:#fffcdb42;
}
b {font-size:1.15em;line-height:1em;}
img.invert {filter:invert(1) hue-rotate(180deg);}
.work a {box-shadow:none;}
}

@media (prefers-color-scheme:dark) and (min-width:375px) {
.flex-grid a {opacity:0.75;}
.flex-grid a:hover {box-shadow:0 10px 90px -10px rgba(155,175,255,0.6);opacity:1;}
}

/*

bg-red
#FF5D5D

text-highlight
#fff

text-red
#4B0909

*/

